--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.febers.iuestc">
+    package="com.febers.iuestc"> <!-- ListItemView 最低版本为17，当前应用为15 -->
+    <uses-sdk tools:overrideLibrary="com.lucasurbas.listitemview" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -17,9 +18,6 @@
     <uses-permission android:name="android.permission.READ_LOGS" />
     <!-- 保存资源到SD卡 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-    <!--ListItemView 最低版本为17，当前应用为15-->
-    <uses-sdk tools:overrideLibrary="com.lucasurbas.listitemview" />
 
     <application
         android:name=".base.BaseApplication"
@@ -87,7 +85,7 @@
         <activity android:name=".module.login.view.LoginActivity" />
         <activity android:name=".module.ecard.view.ECardActivity" />
         <activity android:name=".module.user.view.UserActivity" />
-        <activity android:name=".module.more.SettingActivity"></activity>
+        <activity android:name=".module.more.ThemeActivity"></activity>
     </application>
 
 </manifest>
