--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,19 +17,18 @@
     <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
-        android:name=".base.BaseApplication"
+        android:name=".base.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/DefaultTheme">
-        <activity android:name=".home.view.HomeActivity"
+        <activity
+            android:name=".home.view.HomeActivity"
             android:label="i成电" />
-        <activity
-            android:name=".module.library.view.LibQueryActivity" />
-        <activity
-            android:name=".module.exam.view.ExamActivity" />
+        <activity android:name=".module.library.view.LibQueryActivity" />
+        <activity android:name=".module.exam.view.ExamActivity" />
         <activity
             android:name="com.tencent.bugly.beta.ui.BetaActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale"
@@ -45,12 +44,9 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
-        <activity
-            android:name=".module.grade.view.GradeActivity" />
-        <activity
-            android:name=".module.service.view.ServiceActivity" />
-        <activity
-            android:name=".module.service.view.BusActivity"/>
+        <activity android:name=".module.grade.view.GradeActivity" />
+        <activity android:name=".module.service.view.ServiceActivity" />
+        <activity android:name=".module.service.view.BusActivity" />
         <activity
             android:name=".home.view.SplashActivity"
             android:theme="@style/SplashTheme">
@@ -60,10 +56,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".module.service.view.CalActivity" />
-        <activity
-            android:name=".module.news.view.NewsActivity" />
+        <activity android:name=".module.service.view.CalActivity" />
+        <activity android:name=".module.news.view.NewsActivity" />
         <activity android:name=".module.news.view.NewsDetailActivity" />
         <activity android:name=".module.more.AboutActivity" />
         <activity android:name=".module.login.view.LoginActivity" />
@@ -71,9 +65,12 @@
         <activity android:name=".module.user.view.UserActivity" />
         <activity android:name=".module.more.ThemeActivity" />
         <activity android:name=".module.library.view.LibDetailActivity" />
-        <activity android:name=".module.more.UpdateActivity"
-            android:theme="@style/UpdateTheme">
-        </activity>
+        <activity
+            android:name=".module.more.UpdateActivity"
+            android:theme="@style/UpdateTheme" />
+        <activity android:name=".module.news.view.NoticeActivity" />
+        <activity android:name=".module.news.view.NoticeDetailActivity" />
+        <activity android:name=".module.library.view.LibHistoryActivity"></activity>
     </application>
 
 </manifest>
