--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,5 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 org.gradle.parallel=true
 org.gradle.daemon=true
+android.useAndroidX=true
+android.enableJetifier=true
